--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "'I love hue' clone for browser",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack-dev-server --host 0.0.0.0",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "dev": "webpack-dev-server --config ./webpack.config.dev.js --hot",
+    "build": "webpack --config ./webpack.config.prod.js",
+    "watch": "webpack --watch --config ./webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -28,10 +28,16 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vue-loader": "^15.3.0",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.16.5",
